RESOLVED FIXED117258
[GTK] AcceleratedCompositingContext: fix layerFlushTimerFiredCallback condition
https://bugs.webkit.org/show_bug.cgi?id=117258
Summary [GTK] AcceleratedCompositingContext: fix layerFlushTimerFiredCallback condition
Alberto Garcia
Reported 2013-06-05 08:42:59 PDT
The condition for the timeout handler in AcceleratedCompositingContext::renderLayersToWindow() doesn't seem to be ok. I added parentheses in r151198 to make the precedence rules explicit but after double checking with Martin it turns out that it was already wrong and needed to be changed instead.
Attachments
Patch (1.87 KB, patch)
2013-06-05 08:47 PDT, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2013-06-05 08:47:08 PDT
WebKit Commit Bot
Comment 2 2013-06-05 15:43:02 PDT
Comment on attachment 203856 [details] Patch Clearing flags on attachment: 203856 Committed r151245: <http://trac.webkit.org/changeset/151245>
WebKit Commit Bot
Comment 3 2013-06-05 15:43:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.