[GTK] AcceleratedCompositingContext: fix layerFlushTimerFiredCallback condition https://bugs.webkit.org/show_bug.cgi?id=117258

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-06-05
Reviewed by Martin Robinson.

The expressions were incorrectly grouped, a timeout handler can
only be added only if there's none running already.

* WebCoreSupport/AcceleratedCompositingContextGL.cpp:
(WebKit::AcceleratedCompositingContext::renderLayersToWindow):

Canonical link: https://commits.webkit.org/135522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151245 268f45cc-cd09-0410-ab3c-d52691b4dbfc